[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="cli"
path = "src/bin/cli.rs"

[[bin]]
name="server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.59"                                   
bytes = "1.3.0"                                     
resp = "1.0.3"
thiserror = "1.0.32"                                
tokio = { version = "1.23.0", features = ["full"] } 
clap = { version = "4.2.7", features = ["derive"] }
tokio-stream = "0.1"
tracing = "0.1.34"